# RowanVm

./: .gitignore  CMakeLists.txt  README.md  language.md
src/: asm_main.cpp  condition.hpp  instruction.hpp  main.cpp  vm.cpp  vm.hpp  vm_main.cpp
src/Assembler/Lexer/: braceToken.hpp  colonToken.hpp  condToken.hpp  labelToken.hpp  lexer.cpp  lexer.hpp  numberToken.hpp  opcodeToken.hpp  registerToken.hpp  token.hpp
src/Assembler/Parser/: ast.hpp  attribute.hpp  condInstr.hpp  labelAst.hpp  labelInstr.hpp  noRegInstr.hpp  nop.hpp  opcodeType.hpp  parser.cpp  parser.hpp  registerNumInstr.hpp  singleRegInstr.hpp  twoRegInstr.hpp
src/IntermediateData/: condition.hpp  emitHex.hpp  instruction.hpp  opcodeData.hpp
src/VirtualMachine/: attributes.hpp  translator.cpp  translator.hpp  vm.cpp  vm.hpp
src/VirtualMachine/Parser/: Executable.cpp  Executable.hpp  VMParser.cpp  VMParser.hpp
src/VirtualMachine/Translation/: attributes.hpp  translator.cpp  translator.hpp
tests/: CMakeLists.txt  lexerTests.hpp  parserTests.hpp  testDriver.cpp  translatorTests.hpp  vmTests.hpp
